<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_weight="25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/take_a_picture"
        android:textColor="@android:color/white"

        android:onClick="onCameraButtonClicked"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/import_a_picture"
        android:textColor="@android:color/white"

        android:onClick="onGalleryButtonClicked"/>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/convert_into_anime"
        android:textColor="@android:color/white"

        android:onClick="onConvertButtonClicked"/>

</LinearLayout>