<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnectionActivity">

    <TextView
        android:id="@+id/txtConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_ip_address"
        android:textSize="30sp"
        android:fontFamily="@font/megatron_italic"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/ip_address"
        android:fontFamily="@font/megatron_italic"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:theme="@style/AlertDialog.AppCompat.Light"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/megatron_italic"
        android:drawableEnd="@drawable/ic_check_white_24dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"

        android:onClick="onConfirmButtonClicked"/>

</LinearLayout>